# promptinear

./: .env.example  .gitignore  LICENSE  README.md  history.json  message.py  prompt_analyzer.py  promptinear.py  pyproject.toml  scoring.py  stats.py
src/promptinear/: __init__.py  __main__.py  cli.py  config.py  models.py  scoring.py  stats.py  storage.py
src/promptinear/analyzers/: __init__.py  base.py  heuristic.py  llm.py
src/promptinear/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai_compat.py
src/promptinear/tui/: __init__.py  app.py  theme.py  widgets.py
src/promptinear/tui/screens/: __init__.py  analyze.py  dashboard.py  help.py  history.py  settings.py  tips.py  welcome.py
tests/: conftest.py  test_cli.py  test_cli_more.py  test_config.py  test_heuristic.py  test_llm_analyzer.py  test_models.py  test_providers.py  test_scoring.py  test_screens.py  test_stats.py  test_storage.py  test_widgets.py
